tests/fixtures/positive/code-style/ProhibitSuppressWarnings_MultilineComment.cls
// Valid: Multi-line comment containing suppression text
public class Example8 {
    /*
     * This method does not use @SuppressWarnings
     * or NOPMD comments
     */
    public void method() {
        int value = 42;
    }
}

