tests/fixtures/negative/code-style/ProhibitSuppressWarnings_NOPMD_WithSpace.cls
// Violation: NOPMD comment with space before
public class Example9 {
    public void method() {
        int unused = 42; //  NOPMD
    }
}

